# retty-io

./: CHANGELOG.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: cargo.yml  grcov.yml
benches/criterion/: no_op.rs
benches/lai/: no_op.rs
examples/: cat.rs  mix.rs  tcp_listener.rs  tcp_listener_fixed_buffers.rs  tcp_stream.rs  test_create_dir_all.rs  udp_socket.rs  unix_listener.rs  unix_stream.rs  wrk-bench.rs
retty-io/: Cargo.toml
retty-io/src/: blocking.rs  lib.rs  runtime.rs
retty-io/src/driver/: mod.rs
retty-io/src/driver/uring/: mod.rs
retty-io/src/fs/: file.rs
retty-io/src/utils/: uring_detect.rs
retty-io/tests/: fs_file.rs  tcp_accept.rs  tcp_connect.rs  tcp_echo.rs  tcp_into_split.rs  tcp_split.rs  udp.rs  uds_cred.rs  uds_split.rs  uds_stream.rs  zero_copy.rs
retty-macros/src/: entry.rs  lib.rs
src/: broadcast.rs  channel.rs  event_imp.rs  lazycell.rs  lib.rs  poll.rs  timer.rs  token.rs  udp.rs
src/buf/: bounded.rs  io_buf.rs  io_buf_mut.rs  slice.rs
src/buf/fixed/: mod.rs  pool.rs  registry.rs
src/deprecated/: event_loop.rs  unix.rs
src/fs/: create_dir_all.rs  directory.rs  file.rs  open_options.rs  statx.rs
src/io/: connect.rs  noop.rs
src/net/: mod.rs  tcp.rs  udp.rs
src/net/tcp/: listener.rs  stream.rs
src/net/unix/: listener.rs  stream.rs
src/runtime/: mod.rs
src/sys/fuchsia/: eventedfd.rs  handles.rs  mod.rs  ready.rs  selector.rs
src/sys/unix/: epoll.rs  eventedfd.rs  kqueue.rs  ready.rs  uds.rs
src/sys/windows/: mod.rs  selector.rs  tcp.rs  udp.rs
test/: benchmark.rs  mod.rs  test_battery.rs  test_broken_pipe.rs  test_close_on_drop.rs  test_custom_evented.rs  test_double_register.rs  test_echo_server.rs  test_fuchsia_handles.rs  test_local_addr_ready.rs  test_multicast.rs  test_notify.rs  test_oneshot.rs  test_poll.rs  test_poll_channel.rs  test_register_deregister.rs  test_register_multiple_event_loops.rs  test_reregister_without_poll.rs  test_smoke.rs  test_subprocess_pipe.rs  test_tcp.rs  test_tcp_level.rs  test_tcp_shutdown.rs  test_tick.rs  test_udp_level.rs  test_udp_socket.rs  test_uds_shutdown.rs  test_unix_echo_server.rs  test_unix_pass_fd.rs  test_write_then_drop.rs
tests/: buf.rs  channel.rs  driver.rs  fixed_buf.rs  fs_directory.rs  fs_file.rs  runtime.rs
