[package]
name = "retty-io"
version = "0.0.0"
authors = ["Rusty Rain <y@liu.mx>"]
edition = "2021"
description = "A collection of Metal IO (mio) based utilities, like channel, timer, UDP socket with ECN, etc"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/retty-io"
repository = "https://github.com/retty-io/retty-io"
homepage = "https://retty.io"
keywords = ["networking", "protocols"]
categories = [ "network-programming", "asynchronous" ]

[dependencies]
mio = "0.6.23"
crossbeam = "0.8.2"
