[package]
name = "retty-io"
version = "0.4.0"
edition = "2018"
authors = ["Rusty Rain <y@liu.mx>"]
description = "Yet another thread-per-core IO runtime"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/retty-io"
repository = "https://github.com/retty-io/retty-io"
homepage = "https://retty.io"
keywords = ["networking", "protocols"]
categories = [ "network-programming", "asynchronous" ]

[dependencies]
tokio = { version = "1.26.0", features = ["net", "rt", "sync"] }
slab = "0.4.8"
libc = "0.2.140"
io-uring = "0.5.13"
socket2 = { version = "0.4.9", features = ["all"] }
bytes = { version = "1.4.0", optional = true }
futures = "0.3.27"

[dev-dependencies]
tempfile = "3.4.0"
tokio-test = "0.4.2"
iai = "0.1.1"
criterion = "0.4.0"
# we use joinset in our tests
tokio = "1.26.0"
nix = "0.26.2"

[package.metadata.docs.rs]
all-features = true

[profile.bench]
debug = true

[[bench]]
name = "lai_no_op"
path = "benches/lai/no_op.rs"
harness = false

[[bench]]
name = "criterion_no_op"
path = "benches/criterion/no_op.rs"
harness = false
